Fix loading and player z-index

--- a/src/app/styl/views/player.styl
+++ b/src/app/styl/views/player.styl
@@ -5,7 +5,7 @@
 }
 
 .player {
-    z-index: 5
+    z-index: 7
     position: absolute
     overflow: hidden
     background-color: #000
